--- a/min_setup/server/package.json
+++ b/min_setup/server/package.json
@@ -11,6 +11,7 @@
   "author": "Adrian Kydland Skaftun",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0"
